extracted converting TimerRecord to a message and creating buttons to select time records